--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,15 @@
+$size: 22px;
+
+
+$primaryColor: rgb(90, 14, 135);
+
+$primaryColorLight: lighten($primaryColor,20%);
+
 .name {
-    font-size: 22px;
+    font-size: $size;
+    color: $primaryColor;
+}
+
+.genus {
+  color: $primaryColorLight;
 }
